# gserve

./: README.md  pyproject.toml
gserve/: __init__.py  configs.py  log_utils.py  schema.py  vllm_client.py  vllm_server.py  vllm_service.py
notebooks/: test_vllm_service.ipynb
src/: configs.py  vllm_client.py  vllm_server.py  vllm_service.py
tests/: prompts.txt
