[tool.setuptools.packages.find]
include = ["gserve*"]
exclude = ["notebooks*", "tests*"]

[project]
name = "gserve"
version = "0.1.1"
description = "Simple vLLM batch serving for LLMs with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "huggingface-hub>=0.32.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "msgspec>=0.19.0",
    "ray>=2.46.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "httpx>=0.28.1",
    "uvicorn>=0.34.3",
    "vllm>=0.9.0.1",
]
